--- a/pro.html
+++ b/pro.html
@@ -8,6 +8,8 @@
         <ul>
             <li>git init</li>
             <li>git init</li>
+            <li>git add</li>
+            <li>git git commit</li>
 
             
 
